--- a/MiProyecto/MiApp/templates/base.html
+++ b/MiProyecto/MiApp/templates/base.html
@@ -6,7 +6,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="{% url 'casa' %}">Home</a></li>
+            <li><a href="{% url 'home' %}">Casa</a></li>
             <li><a href="{% url 'acerca_de_mi' %}">Acerca de mí</a></li>
             <li><a href="{% url 'crear_publicacion' %}">Crear Publicación</a></li>
             <li><a href="{% url 'buscar' %}?q=">Buscar</a></li>
